[package]
name = "kdash"
version = "0.6.2"
authors = ["Deepu K Sasidharan <d4udts@gmail.com>"]
description = """
A fast and simple dashboard for Kubernetes
"""
documentation = "https://github.com/kdash-rs/kdash"
keywords = ["kdash", "kubernetes", "dashboard"]
repository = "https://github.com/kdash-rs/kdash"
homepage = "https://github.com/kdash-rs/kdash"
readme = "README.md"
license = "MIT"
exclude = [
    "assets/*",
    ".github",
    "Makefile.toml",
    "CONTRIBUTING.md",
    "*.log",
    "tags",
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]

[dependencies]
openssl-probe = "0.1.5"
crossterm = "0.28.1"
ratatui = { version = "0.29.0", default-features = false, features = [
    'crossterm',
] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
syntect = "5.2.0"
syntect-tui = "3.0.5"
clap = { version = "4.5.23", default-features = false, features = [
    "help",
    "usage",
    "error-context",
    "derive",
] }
tokio = { version = "1.42.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
tokio-stream = { version = "0.1.17", default-features = false, features = [
    "time",
] }
futures = "0.3.31"
tui-input = "0.11.1"
duct = "0.13"
anyhow = "1.0.97"
backtrace = { version = "0.3.69", features = ["gimli-symbolize"] }
textwrap = "0.16.1"
regex = "1.11.1"
kube = { version = "0.98.0", default-features = false, features = [
    "socks5",
    "client",
    "rustls-tls",
    "oidc",
    "oauth",
    "ws",
] }
k8s-openapi = { version = "0.24.0", default-features = false, features = [
    "v1_29",
] }
base64 = "0.22.1"
human-panic = "2.0.2"
kubectl-view-allocations = { version = "0.20.3", default-features = false }
async-trait = "0.1.83"
glob-match = "0.2.1"
rand = "0.8"
copypasta = "0.10.1"
log = "0.4.22"
simplelog = { version = "0.12.2", default-features = false }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[[bin]]
bench = false
path = "src/main.rs"
name = "kdash"

[profile.release]
lto = true
codegen-units = 1
