[package]
name = "kdash"
version = "1.0.0"
authors = ["Deepu K Sasidharan <d4udts@gmail.com>"]
description = """
A fast and simple dashboard for Kubernetes
"""
documentation = "https://github.com/kdash-rs/kdash"
keywords = ["kdash", "kubernetes", "dashboard"]
repository = "https://github.com/kdash-rs/kdash"
homepage = "https://github.com/kdash-rs/kdash"
readme = "README.md"
license = "MIT"
exclude = [
    "test_data/*",
    "deployment/*",
    "artwork/*",
    ".github",
    "Makefile.toml",
    "CONTRIBUTING.md",
    "*.log",
    "tags",
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]

[dependencies]
chrono = "0.4"
openssl-probe = "0.2"
crossterm = "0.29"
ratatui = { version = "0.30", default-features = false, features = [
    'crossterm',
] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
strum = { version = "0.26", features = ["derive"] }
syntect = { version = "5.3.0", default-features = false, features = [
    "default-fancy",
] }
clap = { version = "4.6", default-features = false, features = [
    "help",
    "usage",
    "error-context",
    "derive",
] }
tokio = { version = "1.50.0", default-features = false, features = [
    "macros",
    "process",
    "rt-multi-thread",
] }
tokio-stream = { version = "0.1.18", default-features = false, features = [
    "time",
] }
futures = "0.3.32"
duct = "1.1.1"
anyhow = "1.0.102"
backtrace = "0.3.76"
textwrap = "0.16.2"
regex = "1.12.3"
kube = { version = "3.1.0", default-features = false, features = [
    "socks5",
    "http-proxy",
    "client",
    "rustls-tls",
    "oidc",
    "oauth",
    "ws",
] }
k8s-openapi = { version = "0.27.1", default-features = false, features = [
    "v1_31",
] }
notify = { version = "8", default-features = false, features = [
    "macos_fsevent",
] }
base64 = "0.22.1"
human-panic = "2.0.7"
kubectl-view-allocations = { version = "1.1.0", default-features = false }
async-trait = "0.1.89"
glob-match = "0.2.1"
rand = "0.10.1"
copypasta = "0.10.2"
log = "0.4.29"
simplelog = { version = "0.12.2", default-features = false }
dirs = "6.0.0"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[[bin]]
bench = false
path = "src/main.rs"
name = "kdash"

[profile.release]
lto = true
codegen-units = 1
